--- a/ios/Honeybee Wifi Config/Honeybee Wifi Config/Base.lproj/Main.storyboard
+++ b/ios/Honeybee Wifi Config/Honeybee Wifi Config/Base.lproj/Main.storyboard
@@ -1,11 +1,31 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9532" systemVersion="14F2511" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13196" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_0" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13173"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
+        <!--Navigation Controller-->
+        <scene sceneID="WKE-in-gax">
+            <objects>
+                <navigationController modalPresentationStyle="formSheet" id="ASl-rb-rdp" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="6QF-Wi-Te4">
+                        <rect key="frame" x="0.0" y="20" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="WBu-Uj-G6N" kind="relationship" relationship="rootViewController" id="3Bv-eQ-81v"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="VXp-Ub-O7a" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1468" y="1045"/>
+        </scene>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
@@ -15,64 +35,138 @@
                         <viewControllerLayoutGuide type="bottom" id="LpI-0s-Fja"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="ncE-NO-OpE">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <webView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="q6j-9s-MYt">
-                                <rect key="frame" x="0.0" y="0.0" width="600" height="580"/>
-                                <color key="backgroundColor" red="0.36078431370000003" green="0.38823529410000002" blue="0.4039215686" alpha="1" colorSpace="deviceRGB"/>
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                                <color key="backgroundColor" red="0.28958413004875183" green="0.31462949514389038" blue="0.32950475811958313" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="320" id="i8G-JX-qkj"/>
+                                </constraints>
                                 <connections>
                                     <outlet property="delegate" destination="BYZ-38-t0r" id="K5x-A8-TzV"/>
                                 </connections>
                             </webView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TDc-Z1-72w">
-                                <rect key="frame" x="0.0" y="579" width="600" height="21"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="21" id="t5e-6O-hxK"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstAttribute="trailingMargin" secondItem="q6j-9s-MYt" secondAttribute="trailing" constant="-20" id="LZP-n6-eVI"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="TDc-Z1-72w" secondAttribute="trailing" constant="-20" id="NGS-sq-Ctz"/>
-                            <constraint firstItem="LpI-0s-Fja" firstAttribute="top" secondItem="TDc-Z1-72w" secondAttribute="bottom" id="QFu-EX-0oe"/>
-                            <constraint firstItem="TDc-Z1-72w" firstAttribute="leading" secondItem="ncE-NO-OpE" secondAttribute="leadingMargin" constant="-20" id="d7A-9w-0NF"/>
-                            <constraint firstItem="q6j-9s-MYt" firstAttribute="leading" secondItem="ncE-NO-OpE" secondAttribute="leadingMargin" constant="-20" id="fIf-Py-G3J"/>
-                            <constraint firstItem="LpI-0s-Fja" firstAttribute="top" secondItem="q6j-9s-MYt" secondAttribute="bottom" constant="20" id="kWf-fg-2xt"/>
-                            <constraint firstItem="q6j-9s-MYt" firstAttribute="top" secondItem="ncE-NO-OpE" secondAttribute="topMargin" id="yF9-Vu-xze"/>
+                            <constraint firstItem="q6j-9s-MYt" firstAttribute="top" secondItem="ncE-NO-OpE" secondAttribute="top" id="9Jq-SZ-KFE"/>
+                            <constraint firstItem="q6j-9s-MYt" firstAttribute="leading" secondItem="ncE-NO-OpE" secondAttribute="leading" id="GPI-Vj-Xxm"/>
+                            <constraint firstAttribute="bottomMargin" secondItem="q6j-9s-MYt" secondAttribute="bottom" id="dCn-mI-rO3"/>
                         </constraints>
                     </view>
                     <connections>
-                        <outlet property="statusLabel" destination="TDc-Z1-72w" id="hqd-hh-XKY"/>
                         <outlet property="view" destination="ncE-NO-OpE" id="Q5r-UK-jMF"/>
                         <outlet property="webView" destination="q6j-9s-MYt" id="zhx-AP-rpw"/>
+                        <segue destination="ASl-rb-rdp" kind="show" identifier="ShowNetworkLoginSegue" id="lrA-kD-g35"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="457" y="510"/>
+            <point key="canvasLocation" x="455.625" y="509.15492957746477"/>
         </scene>
-        <!--Network Dialog View Controller-->
+        <!--Enter Network Settings-->
         <scene sceneID="1pK-pm-z65">
             <objects>
-                <viewController id="WBu-Uj-G6N" customClass="NetworkDialogViewController" sceneMemberID="viewController">
+                <viewController modalPresentationStyle="formSheet" id="WBu-Uj-G6N" customClass="NetworkDialogViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="QUP-u2-PLA"/>
                         <viewControllerLayoutGuide type="bottom" id="zVg-gC-JSL"/>
                     </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="Jhq-du-7KG">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                    <view key="view" contentMode="redraw" id="Jhq-du-7KG">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="320"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="SSID" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Gcr-9y-Z9l">
+                                <rect key="frame" x="24" y="67" width="37" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="bez-AN-VL1">
+                                <rect key="frame" x="69" y="64" width="235" height="30"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" smartDashesType="no" smartInsertDeleteType="no" smartQuotesType="no"/>
+                                <connections>
+                                    <action selector="connectHoneybee:" destination="WBu-Uj-G6N" eventType="primaryActionTriggered" id="Phh-cH-iA3"/>
+                                </connections>
+                            </textField>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Password" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xKJ-HP-1Sx">
+                                <rect key="frame" x="16" y="141" width="74" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="jqf-RK-Zi6">
+                                <rect key="frame" x="16" y="102" width="288" height="29"/>
+                                <segments>
+                                    <segment title="Open"/>
+                                    <segment title="WPA"/>
+                                    <segment title="WEP"/>
+                                </segments>
+                                <connections>
+                                    <action selector="selectSecurityType:" destination="WBu-Uj-G6N" eventType="valueChanged" id="ZM7-2F-rJL"/>
+                                </connections>
+                            </segmentedControl>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" clearButtonMode="unlessEditing" translatesAutoresizingMaskIntoConstraints="NO" id="UUZ-lZ-XYM">
+                                <rect key="frame" x="98" y="138" width="206" height="30"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" smartDashesType="no" smartInsertDeleteType="no" smartQuotesType="no" textContentType="password"/>
+                                <connections>
+                                    <action selector="connectHoneybee:" destination="WBu-Uj-G6N" eventType="primaryActionTriggered" id="20z-G2-02n"/>
+                                </connections>
+                            </textField>
+                        </subviews>
+                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="jqf-RK-Zi6" firstAttribute="leading" secondItem="Jhq-du-7KG" secondAttribute="leadingMargin" id="7aV-eC-6Qc"/>
+                            <constraint firstItem="bez-AN-VL1" firstAttribute="trailing" secondItem="Jhq-du-7KG" secondAttribute="trailingMargin" id="9Sh-0J-an2"/>
+                            <constraint firstItem="bez-AN-VL1" firstAttribute="baseline" secondItem="Gcr-9y-Z9l" secondAttribute="baseline" id="9ve-su-4f5"/>
+                            <constraint firstItem="jqf-RK-Zi6" firstAttribute="trailing" secondItem="Jhq-du-7KG" secondAttribute="trailingMargin" id="Fb1-Uj-94g"/>
+                            <constraint firstItem="UUZ-lZ-XYM" firstAttribute="leading" secondItem="xKJ-HP-1Sx" secondAttribute="trailing" constant="8" id="LGp-lz-7Nr"/>
+                            <constraint firstItem="UUZ-lZ-XYM" firstAttribute="top" secondItem="jqf-RK-Zi6" secondAttribute="bottom" constant="8" id="Lyq-aT-JMh"/>
+                            <constraint firstItem="UUZ-lZ-XYM" firstAttribute="baseline" secondItem="xKJ-HP-1Sx" secondAttribute="baseline" id="MT4-vr-gDE"/>
+                            <constraint firstItem="bez-AN-VL1" firstAttribute="top" secondItem="QUP-u2-PLA" secondAttribute="bottom" constant="20" id="RXT-oX-yY1"/>
+                            <constraint firstItem="Gcr-9y-Z9l" firstAttribute="leading" secondItem="Jhq-du-7KG" secondAttribute="leadingMargin" constant="8" id="cE2-79-UoL"/>
+                            <constraint firstItem="xKJ-HP-1Sx" firstAttribute="leading" secondItem="Jhq-du-7KG" secondAttribute="leadingMargin" id="gCk-Wf-e6T"/>
+                            <constraint firstItem="jqf-RK-Zi6" firstAttribute="top" secondItem="bez-AN-VL1" secondAttribute="bottom" constant="8" id="gh4-8c-9hv"/>
+                            <constraint firstItem="bez-AN-VL1" firstAttribute="leading" secondItem="Gcr-9y-Z9l" secondAttribute="trailing" constant="8" id="lPo-Iz-a27"/>
+                            <constraint firstItem="UUZ-lZ-XYM" firstAttribute="trailing" secondItem="Jhq-du-7KG" secondAttribute="trailingMargin" id="mT4-Cw-hzn"/>
+                        </constraints>
                     </view>
+                    <navigationItem key="navigationItem" title="Enter Network Settings" id="Nr5-VO-XSa">
+                        <barButtonItem key="backBarButtonItem" title="Back" id="xDS-ic-oPl"/>
+                        <barButtonItem key="leftBarButtonItem" title="Back" id="MI1-9j-oVr">
+                            <connections>
+                                <action selector="dismiss:" destination="WBu-Uj-G6N" id="6KT-y3-mg5"/>
+                            </connections>
+                        </barButtonItem>
+                        <barButtonItem key="rightBarButtonItem" style="plain" id="6k3-vG-bSv">
+                            <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="qBP-5l-KwR">
+                                <rect key="frame" x="245" y="7" width="59" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Connect"/>
+                            </button>
+                            <connections>
+                                <action selector="connectHoneybee:" destination="WBu-Uj-G6N" id="8zy-FZ-H9f"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <modalFormSheetSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+                    <size key="freeformSize" width="320" height="320"/>
+                    <connections>
+                        <outlet property="passwordField" destination="UUZ-lZ-XYM" id="TtP-ic-26Z"/>
+                        <outlet property="securitySegments" destination="jqf-RK-Zi6" id="DI6-Tq-bIf"/>
+                        <outlet property="ssidField" destination="bez-AN-VL1" id="WrY-fc-22f"/>
+                        <outlet property="view" destination="Jhq-du-7KG" id="Zvu-Wa-OcE"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="r8S-wz-B1M" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="457" y="1212"/>
+            <point key="canvasLocation" x="455.625" y="1367.9577464788733"/>
         </scene>
     </scenes>
 </document>
