Changed constraints and HTTP to HTTPS on post request.

--- a/ios/Honeybee Wifi Config/Honeybee Wifi Config/Base.lproj/Main.storyboard
+++ b/ios/Honeybee Wifi Config/Honeybee Wifi Config/Base.lproj/Main.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13196" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <device id="retina4_0" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13173"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13527"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -39,11 +39,8 @@
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <webView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="q6j-9s-MYt">
-                                <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                                <rect key="frame" x="0.0" y="20" width="320" height="548"/>
                                 <color key="backgroundColor" red="0.28958413004875183" green="0.31462949514389038" blue="0.32950475811958313" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="320" id="i8G-JX-qkj"/>
-                                </constraints>
                                 <connections>
                                     <outlet property="delegate" destination="BYZ-38-t0r" id="K5x-A8-TzV"/>
                                 </connections>
@@ -51,8 +48,9 @@
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="q6j-9s-MYt" firstAttribute="top" secondItem="ncE-NO-OpE" secondAttribute="top" id="9Jq-SZ-KFE"/>
+                            <constraint firstItem="q6j-9s-MYt" firstAttribute="top" secondItem="hFO-g4-joY" secondAttribute="bottom" id="9Jq-SZ-KFE"/>
                             <constraint firstItem="q6j-9s-MYt" firstAttribute="leading" secondItem="ncE-NO-OpE" secondAttribute="leading" id="GPI-Vj-Xxm"/>
+                            <constraint firstAttribute="trailing" secondItem="q6j-9s-MYt" secondAttribute="trailing" id="LOM-uB-yPG"/>
                             <constraint firstAttribute="bottomMargin" secondItem="q6j-9s-MYt" secondAttribute="bottom" id="dCn-mI-rO3"/>
                         </constraints>
                     </view>
